# bookmark-stash

./: .gitignore  Cargo.toml  INSTALL.md  README.md  package-lock.json  package.json  playwright.config.ts
backend/: Cargo.toml
backend/src/: bookmark_import.rs  main.rs
backend/src/api/: bookmarks.rs  import.rs  mod.rs  search.rs  tags.rs
backend/src/content/: extractor.rs  fetcher.rs  mod.rs
backend/src/db/: mod.rs  queries.rs  schema.rs
extension/: .amo-upload-uuid  background.js  manifest.json  manifest_chromium.json  manifest_firefox.json  popup-ui.js  popup.html  popup.js  styles.css
extension/options/: options.html  options.js
extension/pkg/: stash_frontend.d.ts  stash_frontend.js  stash_frontend_bg.wasm  stash_frontend_bg.wasm.d.ts
frontend/: Cargo.toml
frontend/src/: api.rs  lib.rs
frontend/src/components/: app.rs  mod.rs  quick_save.rs  reader.rs  reading_list.rs  search.rs
scripts/: prepare-chromium-extension.sh  prepare-firefox-extension.sh  sign-firefox.sh
shared/: Cargo.toml
shared/src/: lib.rs
tests/: extension.spec.ts  smoke.spec.ts
