[workspace]
resolver = "2"
members = [
    "backend",
    "frontend",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kblack0610"]
license = "MIT"

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
url = { version = "2", features = ["serde"] }

# Backend
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
scraper = "0.22"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Frontend (Leptos)
leptos = { version = "0.7", features = ["csr"] }
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Storage"] }
urlencoding = "2"
console_error_panic_hook = "0.1"

# Internal crates
stash-shared = { path = "shared" }
