[package]
name = "stash-backend"
version.workspace = true
edition.workspace = true

[dependencies]
stash-shared.workspace = true

# Web framework
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true

# Database
rusqlite.workspace = true

# Content extraction
reqwest.workspace = true
scraper.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
