[package]
name = "stash-frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stash-shared.workspace = true

leptos.workspace = true
gloo-net.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
urlencoding.workspace = true
console_error_panic_hook.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[features]
hydrate = ["leptos/hydrate"]
